Added innner pages

--- a/fog/lib/css/style.css
+++ b/fog/lib/css/style.css
@@ -112,7 +112,7 @@ figcaption {
   /* IE10+ */
   background: linear-gradient(to bottom, rgba(64, 59, 51, 0.98) 0%, rgba(67, 55, 48, 0.98) 12%, rgba(88, 29, 28, 0.62) 88%, rgba(91, 25, 25, 0.62) 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa403b33', endColorstr='#9e5b1919',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa403b33', endColorstr='#9e5b1919',GradientType=0 );
   /* IE6-9 */
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -929,9 +929,11 @@ section {
 .bg-image {
   min-width: 700px; }
 
+.btn {
+  z-index: 900; }
+
 .text {
   margin-top: 15%;
-  z-index: 500;
   position: absolute;
   z-index: 500;
   width: 100%;
@@ -969,7 +971,7 @@ section {
   bottom: 0;
   left: 0; }
 
-#home #title {
+#home .title {
   width: 100%;
   text-align: center;
   text-transform: uppercase;
@@ -982,12 +984,14 @@ section {
   width: 100%;
   height: 100%;
   background: url(../images/fog.gif) no-repeat;
-  background-color: #f8f8f8;
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
+  background-color: #fdfdfd;
   position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0; }
 
 #slide-1 .fog-1 {
@@ -1010,12 +1014,14 @@ section {
   width: 100%;
   height: 100%;
   background: url(../images/fog.gif) no-repeat;
-  background-size: contain;
-  background-color: #f8f8f8;
-  position: fixed;
+  background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
+  background-color: #fdfdfd;
+  position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   z-index: 6; }
 
@@ -1046,13 +1052,15 @@ section {
 #slide-3 .bg-image {
   width: 100%;
   height: 100%;
-  background: url(../images/fog.gif) no-repeat;
-  background-size: contain;
-  background-color: #f8f8f8;
-  position: fixed;
+  background: url(../images/fog.gif);
+  background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
+  background-color: #fdfdfd;
+  position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   z-index: 6; }
 
@@ -1068,9 +1076,9 @@ section {
   width: 625px;
   height: 123px;
   position: fixed;
-  top: 8%;
+  top: 2%;
   right: 0;
-  z-index: 7; }
+  z-index: 6; }
 
 #slide-3 .fog-2 {
   width: 658px;
@@ -1083,13 +1091,15 @@ section {
 #slide-4 .bg-image {
   width: 100%;
   height: 100%;
-  background: url(../images/fog.gif) no-repeat;
-  background-size: contain;
-  background-color: #f8f8f8;
-  position: fixed;
+  background: url(../images/fog.gif);
+  background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
+  background-color: #fdfdfd;
+  position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   z-index: 9; }
 
@@ -1109,4 +1119,22 @@ section {
   left: 0;
   z-index: 11; }
 
-/*# sourceMappingURL=style.css.map */
+.innerpage .bg-image {
+  width: 100%;
+  height: auto;
+  position: fixed;
+  bottom: -30px;
+  left: 0;
+  right: 0;
+  z-index: 10; }
+
+.innerpage .text {
+  z-index: 600;
+  position: fixed;
+  left: 0;
+  bottom: 5%; }
+
+.innerpage .btn {
+  position: fixed;
+  top: 2%;
+  left: 5%; }
