--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -43,10 +43,13 @@ section {
     min-width:700px;
 }
 
+.btn{
+    z-index:900;
+}
+
 //center text and put it on top of landmark img
 .text{
     margin-top:15%;
-    z-index: 500;
     position:absolute;
     z-index:500;
     width:100%;
@@ -77,22 +80,14 @@ section {
 
 
 //Slide 0 - landing
-#home .bg{
+#home .bg {
     height:100%;
     width:100%;
     background-image:url(../images/ggb.gif);
-    background-size:contain;
-    background-position:bottom;
-    background-repeat:no-repeat;
-    background-color:lighten($fog-white,2%);
-    position:fixed;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
+    @include bg-size(contain);
 }
 
-#home #title{
+#home .title{
     width:100%;
     text-align:center;
     text-transform: uppercase;
@@ -107,13 +102,7 @@ section {
     width:100%;
     height:100%;
     background:url(../images/fog.gif) no-repeat;
-    background-color:$fog-white;
-    background-size:cover;
-    background-position:bottom;
-    background-repeat:no-repeat;
-    position:fixed;
-    top:0;
-    left:0;
+    @include bg-size(cover);
 }
 
 #slide-1 .fog-1{
@@ -140,13 +129,7 @@ section {
     width:100%;
     height:100%;
     background:url(../images/fog.gif) no-repeat;
-    background-size:contain;
-    background-color:$fog-white;
-    position:fixed;
-    background-position:bottom;
-    background-repeat:no-repeat;
-    top:0;
-    left:0;
+    @include bg-size(cover);
     z-index:6;
 }
 
@@ -181,14 +164,8 @@ section {
 #slide-3 .bg-image{
     width:100%;
     height:100%;
-    background:url(../images/fog.gif) no-repeat;
-    background-size:contain;
-    background-color:$fog-white;
-    position:fixed;
-    background-position:bottom;
-    background-repeat:no-repeat;
-    top:0;
-    left:0;
+    background:url(../images/fog.gif);
+    @include bg-size(cover);
     z-index:6;
 }
 
@@ -205,9 +182,9 @@ section {
     width:625px;
     height:123px;
     position:fixed;
-    top:8%;
+    top:2%;
     right:0;
-    z-index:7;
+    z-index:6;
 }
 
 #slide-3 .fog-2{
@@ -223,14 +200,8 @@ section {
 #slide-4 .bg-image{
     width:100%;
     height:100%;
-    background:url(../images/fog.gif) no-repeat;
-    background-size:contain;
-    background-color:$fog-white;
-    position:fixed;
-    background-position:bottom;
-    background-repeat:no-repeat;
-    top:0;
-    left:0;
+    background:url(../images/fog.gif);
+    @include bg-size(cover);
     z-index:9;
 }
 
@@ -245,10 +216,36 @@ section {
 }
 
 #slide-4 .fog-2{
-   width:658px;
+    width:658px;
     height:232px;
     position:fixed;
     top:55%;
     left:0;
     z-index:11;
+}
+
+
+//Inner pages
+.innerpage .bg-image{
+    width:100%;
+    height:auto;
+    position:fixed;
+    bottom:-30px;
+    left:0;
+    right:0;
+    z-index:10;
+}
+
+.innerpage .text{
+    z-index:600;
+    position:fixed;
+    left:0;
+    bottom:5%;
+    
+}
+
+.innerpage .btn{
+    position:fixed;
+    top:2%;
+    left:5%;
 }
