--- a/fog/lib/css/partials/_utilities.scss
+++ b/fog/lib/css/partials/_utilities.scss
@@ -38,6 +38,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa403b33', e
     box-shadow: inset 0px 0px 30px 0px $shadow;
 }
 
+//background
+@mixin bg-size($size){
+    background-size:$size;
+    background-position:bottom;
+    background-repeat:no-repeat;
+    background-color:lighten($fog-white,2%);
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+}
+
 //button style
 @mixin button($color){
     border:2px solid $color;
