--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -39,9 +39,6 @@ section {
     position:relative;
 }
 
-.bg-image{
-    min-width:700px;
-}
 
 .btn{
     z-index:900;
@@ -124,7 +121,7 @@ section {
 }
 
 
-//Slide 2
+//Slide 2 - embarcadero
 #slide-2 .bg-image{
     width:100%;
     height:100%;
@@ -248,4 +245,46 @@ section {
     position:fixed;
     top:2%;
     left:5%;
+}
+
+//media queries
+@media all and (max-width:654px){
+.text{
+    margin-top:40%;
+    margin-left:auto;
+    margin-right:auto;
+    left:0;
+    right:0;
+    h1{
+        font-size:2.5em;
+    }
+}    
+    
+#slide-2 .item{
+    left:5%;
+}
+    
+#slide-3 .item{
+    left:25%;
+    width:372.6px;
+    height:471.6px;
+}
+    
+#slide-1 img, #slide-4 img{
+    width:250%;
+}
+
+#slide-4 img{
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
+}
+
+#slide-1 .fog-1, #slide-1 .fog-2, #slide-2 .fog-1, #slide-2 .fog-2, #slide-3 .fog-1, #slide-3 .fog-2, #slide-4 .fog-1, #slide-4 .fog-2{
+display:none;
+}
+
 }
