--- a/fog/lib/css/partials/_classes.scss
+++ b/fog/lib/css/partials/_classes.scss
@@ -15,7 +15,8 @@
 .centered{
     margin-left:auto;
     margin-right:auto;
-    text-align:center;}
+    text-align:center;
+}
 
 /* -- New Menu -- */
 
@@ -23,30 +24,47 @@
 	/*background-image: url(../images/navdrawer.png);
 	background-repeat:repeat-x;*/
 	position: fixed;
-	top:10px;
-	right:20px;
+	top:20px;
+	right:30px;
 	z-index:599;
 	color: #F5F7FA;
 	background-color: #656D78;
 	/*border: 2px solid #E6E9ED;*/
-	border-radius: 3px;
+	border-radius: 2px;
 	&:hover {
 		background-color: lighten(#656D78, 5%);
 	}
 	.sf-sfmenu {
 	font-size: 2.5em;
 	}
-}
+	.sf-up-arrow {
+	font-size: 2.5em;
+	}
+}	
 
 .sf-painted-ladies, .sf-embarcadero, .sf-coit-tower, .sf-palace-of-fine-arts {
 	font-size: 4em;
 	color: #F5F7FA;
 	/*color: #C0362C;*/
-	-webkit-transition: .5s;
-    -moz-transition: .5s;
-    -o-transition: .5s;
-    -ms-transition: .5s;
-    transition: .5s;
+	-webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    -ms-transition: .3s;
+    transition: .3s;
+}
+.homeicon {
+	color: #123250;
+	font-size: 2.5em;
+	background-color: rgba(245,247,250,0.3);
+	border-radius: 15%;
+	/*border: 2px solid #CCD1D9;*/
+	&:hover {
+		background-color: rgba(245,247,250,0.8);
+	}
+}
+
+.backicon {
+	font-size: 2em;
 }
 
 #right-trigger {
@@ -57,20 +75,17 @@
 h1.logo {
 	margin-top:5px;
 	margin-bottom: 0;
-	-webkit-transition: .5s;
-    -moz-transition: .5s;
-    -o-transition: .5s;
-    -ms-transition: .5s;
-    transition: .5s;
+	-webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    -ms-transition: .3s;
+    transition: .3s;
 	&:hover {
-	-webkit-transform: scale(1.3,1.3);
-	-moz-transform: scale(1.3,1.3);
-    transform: scale(1.3,1.3) ;
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -o-transition: .5s;
-    -ms-transition: .5s;
-    transition: .5s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    -ms-transition: .3s;
+    transition: .3s;
 	}
 }
 
@@ -148,9 +163,9 @@ h1.logo a {
 	color: #CCD1D9;
 	}
 	&:hover .sf-painted-ladies, &:hover .sf-embarcadero, &:hover .sf-coit-tower, &:hover .sf-palace-of-fine-arts {
-		-webkit-transform: scale(1.3,1.3);
-		-moz-transform: scale(1.3,1.3);
-    	transform: scale(1.3,1.3) ;
+		-webkit-transform: scale(1.1,1.1);
+		-moz-transform: scale(1.1,1.1);
+    	transform: scale(1.1,1.1) ;
     	-webkit-transition: .5s;
     	-moz-transition: .5s;
     	-o-transition: .5s;
