--- a/fog/lib/css/style.css
+++ b/fog/lib/css/style.css
@@ -477,27 +477,41 @@ figcaption {
   /*background-image: url(../images/navdrawer.png);
   background-repeat:repeat-x;*/
   position: fixed;
-  top: 10px;
-  right: 20px;
+  top: 20px;
+  right: 30px;
   z-index: 599;
   color: #F5F7FA;
   background-color: #656D78;
   /*border: 2px solid #E6E9ED;*/
-  border-radius: 3px; }
+  border-radius: 2px; }
   #navdrawer-icon:hover {
     background-color: #717a86; }
   #navdrawer-icon .sf-sfmenu {
+    font-size: 2.5em; }
+  #navdrawer-icon .sf-up-arrow {
     font-size: 2.5em; }
 
 .sf-painted-ladies, .sf-embarcadero, .sf-coit-tower, .sf-palace-of-fine-arts {
   font-size: 4em;
   color: #F5F7FA;
   /*color: #C0362C;*/
-  -webkit-transition: .5s;
-  -moz-transition: .5s;
-  -o-transition: .5s;
-  -ms-transition: .5s;
-  transition: .5s; }
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -o-transition: .3s;
+  -ms-transition: .3s;
+  transition: .3s; }
+
+.homeicon {
+  color: #123250;
+  font-size: 2.5em;
+  background-color: rgba(245, 247, 250, 0.3);
+  border-radius: 15%;
+  /*border: 2px solid #CCD1D9;*/ }
+  .homeicon:hover {
+    background-color: rgba(245, 247, 250, 0.8); }
+
+.backicon {
+  font-size: 2em; }
 
 #right-trigger {
   cursor: pointer;
@@ -506,20 +520,17 @@ figcaption {
 h1.logo {
   margin-top: 5px;
   margin-bottom: 0;
-  -webkit-transition: .5s;
-  -moz-transition: .5s;
-  -o-transition: .5s;
-  -ms-transition: .5s;
-  transition: .5s; }
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -o-transition: .3s;
+  -ms-transition: .3s;
+  transition: .3s; }
   h1.logo:hover {
-    -webkit-transform: scale(1.3, 1.3);
-    -moz-transform: scale(1.3, 1.3);
-    transform: scale(1.3, 1.3);
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -o-transition: .5s;
-    -ms-transition: .5s;
-    transition: .5s; }
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    -ms-transition: .3s;
+    transition: .3s; }
 
 h1.logo a {
   font-family: "Antenna-Regular", "Open Sans", sans-serif, sans-serif;
@@ -586,9 +597,9 @@ h1.logo a {
   .cbp-spmenu a:hover {
     color: #CCD1D9; }
   .cbp-spmenu a:hover .sf-painted-ladies, .cbp-spmenu a:hover .sf-embarcadero, .cbp-spmenu a:hover .sf-coit-tower, .cbp-spmenu a:hover .sf-palace-of-fine-arts {
-    -webkit-transform: scale(1.3, 1.3);
-    -moz-transform: scale(1.3, 1.3);
-    transform: scale(1.3, 1.3);
+    -webkit-transform: scale(1.1, 1.1);
+    -moz-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
     -webkit-transition: .5s;
     -moz-transition: .5s;
     -o-transition: .5s;
