--- a/fog/lib/css/partials/_utilities.scss
+++ b/fog/lib/css/partials/_utilities.scss
@@ -53,14 +53,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa403b33', e
 
 //button style
 @mixin button($color){
-    border:2px solid $color;
+    border:3px solid $color;
+    border-radius: 50px;
     color:$color;
     background:transparent;
     padding:0.6em;
     margin:0.6em auto;
     display:block;
     text-align:center;
-    width:220px;
+    width:200px;
     font-weight: 400;
     letter-spacing:0.05em;
     font-size:1.2em;
@@ -69,6 +70,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa403b33', e
     position:relative;
     cursor:pointer;
     outline:0;
+    z-index: 900000;
     @include ease-in-out();
     &:hover{
         background:$color;
@@ -77,7 +79,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa403b33', e
         border-color:darken($color,10%);
     }
     &:active{
-        top:2px;
+        top:0px;
     }
     a{
         color:white;
