--- a/fog/lib/css/partials/_classes.scss
+++ b/fog/lib/css/partials/_classes.scss
@@ -50,6 +50,9 @@
 	/*border: 2px solid #CCD1D9;*/
 	&:hover {
 		color: #434A54;
+		-webkit-transform: scale(1.1,1.1);
+		-moz-transform: scale(1.1,1.1);
+    	transform: scale(1.1,1.1) ;
 	}
 }
 
