--- a/fog/lib/css/style.css
+++ b/fog/lib/css/style.css
@@ -182,9 +182,9 @@ figcaption {
 
 .sf-li {
   position: absolute;
-  left: -2em;
+  left: -1.2em;
   width: 2em;
-  top: 0.14285714em;
+  top: 0.14em;
   text-align: center; }
 
 .sf-li.sf-lg {
@@ -475,6 +475,14 @@ figcaption {
 .fogtitle {
   font-family: "Antenna-Regular"; }
 
+li.neighborhooddesc {
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  line-height: 1.5;
+  padding: 10px;
+  background-color: #db874d;
+  color: white; }
+
 #indexicons {
   background-color: rgba(245, 247, 250, 0.6);
   border: 2px solid #E6E9ED;
@@ -505,6 +513,20 @@ figcaption {
     transform: scale(1.1, 1.1); }
 
 .backicon {
+  font-size: 2em; }
+
+.nbhdicon {
+  font-size: 2em;
+  color: #434A54; }
+
+.listicon {
+  font-size: 2em; }
+
+.infoicon {
+  font-size: 2em;
+  color: #ef7700; }
+
+.downarrow {
   font-size: 2em; }
 
 /* -- New Menu -- */
@@ -588,6 +610,12 @@ h1.logo a {
   position: fixed;
   z-index: 50; }
 
+.cbp-spmenu-bottom {
+  /*background-color: $darkgray2;*/
+  background-color: rgba(245, 247, 250, 0.8);
+  position: fixed;
+  z-index: 50; }
+
 /*.cbp-spmenu h2 {
 	color: #F9F9F9;
 	text-align:center;
@@ -640,10 +668,13 @@ h1.logo a {
 
 .cbp-spmenu-horizontal {
   width: 100%;
-  height: 150px;
+  height: 80%;
+  margin-left: auto;
+  margin-right: auto;
   left: 0;
+  right: 0;
   z-index: 1000;
-  overflow: hidden; }
+  overflow: visible; }
 
 .cbp-spmenu-horizontal h3 {
   height: 100%;
@@ -677,8 +708,8 @@ h1.logo a {
   -webkit-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
   box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5); }
 
-.cbp-spmenu-right.cbp-spmenu-open {
-  right: 0px;
+.cbp-spmenu-bottom.cbp-spmenu-open {
+  bottom: 0px;
   -moz-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
   -webkit-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
   box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
@@ -688,55 +719,55 @@ h1.logo a {
   -moz-animation-duration: 1.5s;
   animation-duration: 1.5s;
   animation-timing-function: ease;
-  /**/
-  -webkit-animation-timing-function: ease; }
+  -webkit-animation-timing-function: ease;
+  /**/ }
 
 @-webkit-keyframes jpushmenu2 {
   0% {
     -webkit-animation-timing-function: ease;
-    -webkit-transform: translateX(1000px);
-    -ms-transform: translateX(1000px);
-    -moz-transform: translateX(1000px);
-    transform: translateX(1000px); }
+    -webkit-transform: translateY(1000px);
+    -ms-transform: translateY(1000px);
+    -moz-transform: translateY(1000px);
+    transform: translateY(1000px); }
   60% {
-    -webkit-transform: translateX(-30px);
-    -ms-transform: translateX(-30px);
-    -moz-transform: translateX(-30px);
-    transform: translateX(-30px); }
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px); }
   /*80% {
-    -webkit-transform: translateX(10px);
-    -ms-transform: translateX(10px);
-    transform: translateX(10px);
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
   }*/
   100% {
     opacity: 1;
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -moz-transform: translateX(0);
-    transform: translateX(0); } }
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -moz-transform: translateY(0);
+    transform: translateY(0); } }
 @-moz-keyframes jpushmenu2 {
   0% {
     -moz-animation-timing-function: ease;
-    -moz-transform: translateX(1000px);
-    transform: translateX(1000px); }
+    -moz-transform: translateY(1000px);
+    transform: translateY(1000px); }
   60% {
-    -moz-transform: translateX(-30px);
-    transform: translateX(-30px); }
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px); }
   /*80% {
-    -webkit-transform: translateX(10px);
-    -ms-transform: translateX(10px);
-    transform: translateX(10px);
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
   }*/
   100% {
     opacity: 1;
-    -moz-transform: translateX(0);
-    transform: translateX(0); } }
+    -moz-transform: translateY(0);
+    transform: translateY(0); } }
 /* Horizontal menu that slides from the top or bottom */
 .cbp-spmenu-top {
   top: -150px; }
 
 .cbp-spmenu-bottom {
-  bottom: -150px; }
+  bottom: -90%; }
 
 .cbp-spmenu-top.cbp-spmenu-open {
   top: 0px; }
@@ -1616,6 +1647,11 @@ section {
   width: 100%;
   text-align: center; }
 
+.content {
+  position: relative;
+  z-index: 500;
+  width: 100%; }
+
 .landmark {
   display: inline-block;
   position: fixed;
@@ -1814,7 +1850,16 @@ section {
 .innerpage .btn {
   position: fixed;
   top: 2%;
-  left: 5%; }
+  left: 5%;
+  padding: 0em; }
+
+.close {
+  position: absolute !important;
+  top: 2%;
+  right: 5%;
+  left: auto !important;
+  margin: 0;
+  padding: 0em; }
 
 @media all and (max-width: 654px) {
   .text {
@@ -1847,5 +1892,48 @@ section {
 
   #slide-1 .fog-1, #slide-1 .fog-2, #slide-2 .fog-1, #slide-2 .fog-2, #slide-3 .fog-1, #slide-3 .fog-2, #slide-4 .fog-1, #slide-4 .fog-2 {
     display: none; } }
+h1.neighborhoodtitle {
+  margin-left: 100px;
+  margin-top: 150px; }
+
+.neighborhood {
+  font-family: "Open Sans", sans-serif;
+  width: 65%;
+  margin-left: 100px;
+  margin-top: 20px;
+  text-align: left;
+  line-height: 1.5;
+  background-color: #db874d;
+  color: white; }
+
+h6 {
+  border-bottom: 1px solid #3a3a3a;
+  margin-top: 50px; }
+
+#openMenu iframe {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  position: relative;
+  margin: auto;
+  position: absolute;
+  top: 0%;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 90%;
+  height: 90%; }
+
+.menu_close {
+  position: relative;
+  top: -40px;
+  z-index: 10;
+  display: block;
+  background-color: rgba(245, 247, 250, 0.8);
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  color: black;
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
