--- a/fog/lib/css/partials/_classes.scss
+++ b/fog/lib/css/partials/_classes.scss
@@ -18,6 +18,75 @@
     text-align:center;
 }
 
+.fogtitle {
+	font-family:$font-heading;
+}
+
+li.neighborhooddesc{
+    font-family:$font-main;
+    text-align:left;
+    line-height:1.5;
+    padding:10px;
+    background-color:$palaceoffinearts;
+    color:white;
+ }
+
+#indexicons {
+	background-color: rgba(245,247,250,0.6);
+	border: 2px solid #E6E9ED;
+	border-radius: 75px;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/* -- Individual Icon Styling  --*/
+
+.sf-painted-ladies, .sf-embarcadero, .sf-coit-tower, .sf-palace-of-fine-arts {
+	font-size: 4em;
+	color: $lightgray;
+	/*color: #C0362C;*/
+	-webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    -ms-transition: .3s;
+    transition: .3s;
+}
+
+.homeicon {
+	color: #123250;
+	font-size: 2em;
+	/*border: 2px solid #CCD1D9;*/
+	&:hover {
+		color: $darkgray2;
+		-webkit-transform: scale(1.1,1.1);
+		-moz-transform: scale(1.1,1.1);
+    	transform: scale(1.1,1.1) ;
+	}
+}
+
+.backicon {
+	font-size: 2em;
+}
+
+.nbhdicon {
+	font-size: 2em;
+	color:$darkgray2;
+}
+
+.listicon {
+	font-size: 2em;
+}
+
+.infoicon {
+	font-size: 2em;
+	color:$ggb-orange;
+}
+
+.downarrow {
+	font-size: 2em;
+}
+
 /* -- New Menu -- */
 
 #navdrawer-icon {
@@ -27,12 +96,12 @@
 	top:20px;
 	right:30px;
 	z-index:599;
-	color: #F5F7FA;
-	background-color: #656D78;
+	color: $lightgray;
+	background-color: $darkgray;
 	/*border: 2px solid #E6E9ED;*/
 	border-radius: 2px;
 	&:hover {
-		background-color: lighten(#656D78, 5%);
+		background-color: lighten($darkgray, 5%);
 	}
 	.sf-sfmenu {
 	font-size: 2.5em;
@@ -40,31 +109,6 @@
 	.sf-up-arrow {
 	font-size: 2.5em;
 	}
-}	
-
-.sf-painted-ladies, .sf-embarcadero, .sf-coit-tower, .sf-palace-of-fine-arts {
-	font-size: 4em;
-	color: #F5F7FA;
-	/*color: #C0362C;*/
-	-webkit-transition: .3s;
-    -moz-transition: .3s;
-    -o-transition: .3s;
-    -ms-transition: .3s;
-    transition: .3s;
-}
-.homeicon {
-	color: #123250;
-	font-size: 2.5em;
-	background-color: rgba(245,247,250,0.3);
-	border-radius: 15%;
-	/*border: 2px solid #CCD1D9;*/
-	&:hover {
-		background-color: rgba(245,247,250,0.8);
-	}
-}
-
-.backicon {
-	font-size: 2em;
 }
 
 #right-trigger {
@@ -133,11 +177,19 @@ h1.logo a {
 
 /* General styles for all menus */
 .cbp-spmenu {
-	background-color: #434A54;
+	background-color: $darkgray2;
 	/*background-color:#F9F9F9;*/
 	position: fixed;
 	z-index:50;
 }
+
+.cbp-spmenu-bottom {
+	/*background-color: $darkgray2;*/
+	background-color: rgba($lightgray, 0.8);
+	position: fixed;
+	z-index:50;
+}
+
 
 /*.cbp-spmenu h2 {
 	color: #F9F9F9;
@@ -155,12 +207,12 @@ h1.logo a {
 }*/
 
 .cbp-spmenu a {
-	color: #F5F7FA;
+	color: $lightgray;
 	/*color: #123250;*/
 	font-size: 1.1em;
 	font-weight: 300;
 	&:hover {
-	color: #CCD1D9;
+	color: $mediumgray;
 	}
 	&:hover .sf-painted-ladies, &:hover .sf-embarcadero, &:hover .sf-coit-tower, &:hover .sf-palace-of-fine-arts {
 		-webkit-transform: scale(1.1,1.1);
@@ -200,10 +252,13 @@ h1.logo a {
 
 .cbp-spmenu-horizontal {
 	width: 100%;
-	height: 150px;
+	height: 80%;
+	margin-left: auto;
+	margin-right: auto;
 	left: 0;
+	right: 0;
 	z-index: 1000;
-	overflow: hidden;
+	overflow: visible;
 }
 
 .cbp-spmenu-horizontal h3 {
@@ -246,8 +301,8 @@ h1.logo a {
  	box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.50);
 }
 
-.cbp-spmenu-right.cbp-spmenu-open {
-	right: 0px;
+.cbp-spmenu-bottom.cbp-spmenu-open {
+	bottom: 0px;
 	-moz-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.50);
 	-webkit-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.50);
  	box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.50);
@@ -257,62 +312,62 @@ h1.logo a {
 	-moz-animation-duration: 1.5s;
 	animation-duration:1.5s;
 	animation-timing-function:ease;
-	/**/-webkit-animation-timing-function:ease;
+	-webkit-animation-timing-function:ease;/**/
 }
 
 @-webkit-keyframes jpushmenu2 {
   0% {
     -webkit-animation-timing-function:ease;
-    -webkit-transform: translateX(1000px);
-    -ms-transform: translateX(1000px);
-	-moz-transform: translateX(1000px);
-    transform: translateX(1000px);
+    -webkit-transform: translateY(1000px);
+    -ms-transform: translateY(1000px);
+	-moz-transform: translateY(1000px);
+    transform: translateY(1000px);
   }
 
   60% {
-    -webkit-transform: translateX(-30px);
-    -ms-transform: translateX(-30px);
-	-moz-transform: translateX(-30px);
-    transform: translateX(-30px);
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+	-moz-transform: translateY(-30px);
+    transform: translateY(-30px);
   }
 
   /*80% {
-    -webkit-transform: translateX(10px);
-    -ms-transform: translateX(10px);
-    transform: translateX(10px);
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
   }*/
 
   100% {
 	 opacity: 1;
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-	-moz-transform: translateX(0);
-    transform: translateX(0);
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+	-moz-transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
 @-moz-keyframes jpushmenu2 {
   0% {
     -moz-animation-timing-function:ease;
-	-moz-transform: translateX(1000px);
-    transform: translateX(1000px);
+	-moz-transform: translateY(1000px);
+    transform: translateY(1000px);
   }
 
   60% {
-	-moz-transform: translateX(-30px);
-    transform: translateX(-30px);
+	-moz-transform: translateY(-30px);
+    transform: translateY(-30px);
   }
 
   /*80% {
-    -webkit-transform: translateX(10px);
-    -ms-transform: translateX(10px);
-    transform: translateX(10px);
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
   }*/
 
   100% {
 	 opacity: 1;
-	-moz-transform: translateX(0);
-    transform: translateX(0);
+	-moz-transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
@@ -323,7 +378,7 @@ h1.logo a {
 }
 
 .cbp-spmenu-bottom {
-	bottom: -150px;
+	bottom: -90%;
 }
 
 .cbp-spmenu-top.cbp-spmenu-open {
