--- a/fog/lib/css/style.css
+++ b/fog/lib/css/style.css
@@ -182,9 +182,9 @@ figcaption {
 
 .sf-li {
   position: absolute;
-  left: -2em;
+  left: -1.2em;
   width: 2em;
-  top: 0.14285714em;
+  top: 0.14em;
   text-align: center; }
 
 .sf-li.sf-lg {
@@ -472,6 +472,63 @@ figcaption {
   margin-right: auto;
   text-align: center; }
 
+.fogtitle {
+  font-family: "Antenna-Regular"; }
+
+li.neighborhooddesc {
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  line-height: 1.5;
+  padding: 10px;
+  background-color: #db874d;
+  color: white; }
+
+#indexicons {
+  background-color: rgba(245, 247, 250, 0.6);
+  border: 2px solid #E6E9ED;
+  border-radius: 75px;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto; }
+
+/* -- Individual Icon Styling  --*/
+.sf-painted-ladies, .sf-embarcadero, .sf-coit-tower, .sf-palace-of-fine-arts {
+  font-size: 4em;
+  color: #F5F7FA;
+  /*color: #C0362C;*/
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -o-transition: .3s;
+  -ms-transition: .3s;
+  transition: .3s; }
+
+.homeicon {
+  color: #123250;
+  font-size: 2em;
+  /*border: 2px solid #CCD1D9;*/ }
+  .homeicon:hover {
+    color: #434A54;
+    -webkit-transform: scale(1.1, 1.1);
+    -moz-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1); }
+
+.backicon {
+  font-size: 2em; }
+
+.nbhdicon {
+  font-size: 2em;
+  color: #434A54; }
+
+.listicon {
+  font-size: 2em; }
+
+.infoicon {
+  font-size: 2em;
+  color: #ef7700; }
+
+.downarrow {
+  font-size: 2em; }
+
 /* -- New Menu -- */
 #navdrawer-icon {
   /*background-image: url(../images/navdrawer.png);
@@ -490,28 +547,6 @@ figcaption {
     font-size: 2.5em; }
   #navdrawer-icon .sf-up-arrow {
     font-size: 2.5em; }
-
-.sf-painted-ladies, .sf-embarcadero, .sf-coit-tower, .sf-palace-of-fine-arts {
-  font-size: 4em;
-  color: #F5F7FA;
-  /*color: #C0362C;*/
-  -webkit-transition: .3s;
-  -moz-transition: .3s;
-  -o-transition: .3s;
-  -ms-transition: .3s;
-  transition: .3s; }
-
-.homeicon {
-  color: #123250;
-  font-size: 2.5em;
-  background-color: rgba(245, 247, 250, 0.3);
-  border-radius: 15%;
-  /*border: 2px solid #CCD1D9;*/ }
-  .homeicon:hover {
-    background-color: rgba(245, 247, 250, 0.8); }
-
-.backicon {
-  font-size: 2em; }
 
 #right-trigger {
   cursor: pointer;
@@ -575,6 +610,12 @@ h1.logo a {
   position: fixed;
   z-index: 50; }
 
+.cbp-spmenu-bottom {
+  /*background-color: $darkgray2;*/
+  background-color: rgba(245, 247, 250, 0.8);
+  position: fixed;
+  z-index: 50; }
+
 /*.cbp-spmenu h2 {
 	color: #F9F9F9;
 	text-align:center;
@@ -627,10 +668,13 @@ h1.logo a {
 
 .cbp-spmenu-horizontal {
   width: 100%;
-  height: 150px;
+  height: 80%;
+  margin-left: auto;
+  margin-right: auto;
   left: 0;
+  right: 0;
   z-index: 1000;
-  overflow: hidden; }
+  overflow: visible; }
 
 .cbp-spmenu-horizontal h3 {
   height: 100%;
@@ -664,8 +708,8 @@ h1.logo a {
   -webkit-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
   box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5); }
 
-.cbp-spmenu-right.cbp-spmenu-open {
-  right: 0px;
+.cbp-spmenu-bottom.cbp-spmenu-open {
+  bottom: 0px;
   -moz-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
   -webkit-box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
   box-shadow: 0px 0px 5px rgba(25, 25, 25, 0.5);
@@ -675,55 +719,55 @@ h1.logo a {
   -moz-animation-duration: 1.5s;
   animation-duration: 1.5s;
   animation-timing-function: ease;
-  /**/
-  -webkit-animation-timing-function: ease; }
+  -webkit-animation-timing-function: ease;
+  /**/ }
 
 @-webkit-keyframes jpushmenu2 {
   0% {
     -webkit-animation-timing-function: ease;
-    -webkit-transform: translateX(1000px);
-    -ms-transform: translateX(1000px);
-    -moz-transform: translateX(1000px);
-    transform: translateX(1000px); }
+    -webkit-transform: translateY(1000px);
+    -ms-transform: translateY(1000px);
+    -moz-transform: translateY(1000px);
+    transform: translateY(1000px); }
   60% {
-    -webkit-transform: translateX(-30px);
-    -ms-transform: translateX(-30px);
-    -moz-transform: translateX(-30px);
-    transform: translateX(-30px); }
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px); }
   /*80% {
-    -webkit-transform: translateX(10px);
-    -ms-transform: translateX(10px);
-    transform: translateX(10px);
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
   }*/
   100% {
     opacity: 1;
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -moz-transform: translateX(0);
-    transform: translateX(0); } }
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -moz-transform: translateY(0);
+    transform: translateY(0); } }
 @-moz-keyframes jpushmenu2 {
   0% {
     -moz-animation-timing-function: ease;
-    -moz-transform: translateX(1000px);
-    transform: translateX(1000px); }
+    -moz-transform: translateY(1000px);
+    transform: translateY(1000px); }
   60% {
-    -moz-transform: translateX(-30px);
-    transform: translateX(-30px); }
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px); }
   /*80% {
-    -webkit-transform: translateX(10px);
-    -ms-transform: translateX(10px);
-    transform: translateX(10px);
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
   }*/
   100% {
     opacity: 1;
-    -moz-transform: translateX(0);
-    transform: translateX(0); } }
+    -moz-transform: translateY(0);
+    transform: translateY(0); } }
 /* Horizontal menu that slides from the top or bottom */
 .cbp-spmenu-top {
   top: -150px; }
 
 .cbp-spmenu-bottom {
-  bottom: -150px; }
+  bottom: -90%; }
 
 .cbp-spmenu-top.cbp-spmenu-open {
   top: 0px; }
@@ -907,14 +951,15 @@ h1.logo a {
     }
 }*/
 .btn {
-  border: 2px solid #ef7700;
+  border: 3px solid #ef7700;
+  border-radius: 50px;
   color: #ef7700;
   background: transparent;
   padding: 0.6em;
   margin: 0.6em auto;
   display: block;
   text-align: center;
-  width: 220px;
+  width: 200px;
   font-weight: 400;
   letter-spacing: 0.05em;
   font-size: 1.2em;
@@ -923,6 +968,7 @@ h1.logo a {
   position: relative;
   cursor: pointer;
   outline: 0;
+  z-index: 900000;
   transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -935,7 +981,7 @@ h1.logo a {
     box-shadow: inset 0px 0px 30px 0px #bc5e00;
     border-color: #bc5e00; }
   .btn:active {
-    top: 2px; }
+    top: 0px; }
   .btn a {
     color: white; }
     .btn a:hover {
@@ -1601,6 +1647,11 @@ section {
   width: 100%;
   text-align: center; }
 
+.content {
+  position: relative;
+  z-index: 500;
+  width: 100%; }
+
 .landmark {
   display: inline-block;
   position: fixed;
@@ -1799,7 +1850,16 @@ section {
 .innerpage .btn {
   position: fixed;
   top: 2%;
-  left: 5%; }
+  left: 5%;
+  padding: 0em; }
+
+.close {
+  position: absolute !important;
+  top: 2%;
+  right: 5%;
+  left: auto !important;
+  margin: 0;
+  padding: 0em; }
 
 @media all and (max-width: 654px) {
   .text {
@@ -1832,5 +1892,47 @@ section {
 
   #slide-1 .fog-1, #slide-1 .fog-2, #slide-2 .fog-1, #slide-2 .fog-2, #slide-3 .fog-1, #slide-3 .fog-2, #slide-4 .fog-1, #slide-4 .fog-2 {
     display: none; } }
+h1.neighborhoodtitle {
+  margin-left: 100px;
+  margin-top: 150px; }
+
+.neighborhood {
+  font-family: "Open Sans", sans-serif;
+  width: 65%;
+  margin-left: 100px;
+  margin-top: 20px;
+  text-align: left;
+  line-height: 1.5;
+  background-color: #db874d;
+  color: white; }
+
+h6 {
+  border-bottom: 1px solid #3a3a3a;
+  margin-top: 50px; }
+
+#openMenu iframe {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin: auto;
+  position: absolute;
+  top: 0%;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 90%;
+  height: 90%; }
+
+.menu_close {
+  position: relative;
+  top: -40px;
+  z-index: 10;
+  display: block;
+  background-color: rgba(245, 247, 250, 0.8);
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  color: black;
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
