fixed awkward ggb, fixed typo

--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -1,17 +1,16 @@
 html, body{
     height:5800px !important;
-    background-image:url(../images/ggb.gif);
 }
 
-#position-log{
-    position:fixed;
-    top:20px;
-    left:20px;
-    background-color:rgba(0,0,0,0.5);
-    color:white;
-    padding:20px;
-    z-index:9999;
-}
+//#position-log{
+//    position:fixed;
+//    top:20px;
+//    left:20px;
+//    background-color:rgba(0,0,0,0.5);
+//    color:white;
+//    padding:20px;
+//    z-index:9999;
+//}
 
 .project-wrap{
     position:relative;
