fixed awkward bg

--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -88,6 +88,7 @@ section {
     width:100%;
     background-image:url(../images/ggb.gif);
     @include bg-size(contain);
+    background-repeat:no-repeat;
 }
 
 #home .title{
